--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -13,3 +13,12 @@
 .btn {
   margin-right: 5px;
 }
+
+#addItemModal > div > div > div.modal-body > div > div > form > div:nth-child(4) > div:nth-child(2) > div > span {
+  width: 100% !important;
+}
+
+body > div.container > div:nth-child(2) > div > table > thead > tr > th:nth-child(5),
+body > div.container > div:nth-child(2) > div > table > tbody > tr > td:last-child {
+  text-align: center;
+}
